--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,11 @@ MIXIN_VERSION=0.8.4
 PARCHMENT_MINECRAFT_VERSION=1.19.3
 PARCHMENT_MAPPINGS=2022.12.18
 
+ARCHITECTURY_ID=architectury
+ARCHITECTURY_VERSION=7.0.66
+ARCHITECTURY_VERSION_RANGE=[7.0.66,8.0.0)
+ARCHITECTURY_DEPENDENCY_ID=architectury-api
+
 FORGE_LOADER_VERSION=44
 FORGE_VERSION=44.0.30
 FORGE_VERSION_RANGE=[44.0.6,45.0.0)
