--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ pluginManagement {
 		maven { url 'https://maven.fabricmc.net' }
 		maven { url 'https://repo.spongepowered.org/repository/maven-public' }
 		maven { url 'https://maven.quiltmc.org/repository/release' }
+		maven { url 'https://maven.architectury.dev/' }
 	}
 
 	resolutionStrategy {
@@ -26,5 +27,6 @@ pluginManagement {
 include 'Common'
 include 'Forge'
 include 'Fabric'
+include 'Data'
 
 rootProject.name = "FantasyFurniture-${MINECRAFT_VERSION}"
