--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -10,6 +10,19 @@ group = "${APEX_GROUP}.${MOD_ID}.fabric"
 version = "${MOD_VERSION}+${MINECRAFT_VERSION}"
 archivesBaseName = "${MOD_ID}-fabric"
 
+sourceSets {
+	shaders {
+		java.srcDirs = [ ]
+		resources.srcDirs = [ ]
+
+		compileClasspath += sourceSets.main.output
+		runtimeClasspath += sourceSets.main.output
+
+		compileClasspath += sourceSets.main.compileClasspath
+		runtimeClasspath += sourceSets.main.runtimeClasspath
+	}
+}
+
 configurations {
 	common
 	shadowCommon
@@ -21,6 +34,17 @@ configurations {
 architectury {
 	platformSetupLoomIde()
 	fabric()
+}
+
+loom {
+	runs {
+		shaders {
+			inherit(client)
+			source(sourceSets.shaders)
+		}
+	}
+
+	createRemapConfigurations(sourceSets.shaders)
 }
 
 repositories {
@@ -55,43 +79,43 @@ dependencies {
 	modImplementation "${APEX_GROUP}.${APEXCORE_ID}.fabric:${APEXCORE_ID}-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
 	modImplementation("${APEX_GROUP}.${APEXCORE_ID}.fabric:${APEXCORE_ID}-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") { transitive false }
 
-	// Uncomment all of the below to enable shaders
-	// ome of these may or may not be required
-	// as fabric brings in some of them
-	// but unsure if sodium/iris uses newer versions
-	// than what fabric brings in
-	// these are just copy pastes from their build scripts
-	// to ensure we have everything
-	// modRuntimeOnly 'maven.modrinth:sodium:mc1.19.2-0.4.4'
-	// modRuntimeOnly 'maven.modrinth:iris:1.19.2-v1.4.3'
-	// runtimeOnly 'it.unimi.dsi:fastutil:8.5.6'
-	// runtimeOnly 'org.lwjgl:lwjgl:3.3.1'
-	// runtimeOnly 'org.lwjgl:lwjgl-opengl:3.3.1'
-	// runtimeOnly 'org.apache.commons:commons-lang3:3.12.0'
-	// runtimeOnly 'org.joml:joml:1.10.4'
-	// runtimeOnly 'org.jetbrains:annotations:23.0.0'
-	// runtimeOnly 'io.github.douira:glsl-transformer:1.0.1'
-	// runtimeOnly 'org.anarres:jcpp:1.4.14'
+	// Shaders
+	modShadersImplementation "net.fabricmc:fabric-loader:${FABRIC_LOADER_VERSION}"
+	modShadersImplementation "net.fabricmc.fabric-api:fabric-api:${FABRIC_VERSION}+${MINECRAFT_VERSION}"
+	shadersImplementation(project(path: ':Common', configuration: 'namedElements')) { transitive false }
+	shadersImplementation(project(path: ':Fabric', configuration: 'namedElements')) { transitive false }
+	modShadersImplementation "${APEX_GROUP}.${APEXCORE_ID}.fabric:${APEXCORE_ID}-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}"
+	modShadersImplementation("${APEX_GROUP}.${APEXCORE_ID}.fabric:${APEXCORE_ID}-fabric:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") { transitive false }
+	shadersImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+	// actual shaders mods inclusion
+	modShadersRuntimeOnly 'maven.modrinth:sodium:mc1.19.3-0.4.8'
+	modShadersRuntimeOnly 'maven.modrinth:iris:1.5.1+1.19.3'
+	shadersRuntimeOnly 'io.github.douira:glsl-transformer:2.0.0-pre8'
+	shadersRuntimeOnly 'org.anarres:jcpp:1.4.14'
 
 	// JEI
 	if(rootProject.hasProperty('JEI_VERSION')) {
 		modCompileOnlyApi "mezz.jei:jei-${MINECRAFT_VERSION}-fabric-api:${JEI_VERSION}"
 		modRuntimeOnly "mezz.jei:jei-${MINECRAFT_VERSION}-fabric:${JEI_VERSION}"
+		modShadersRuntimeOnly "mezz.jei:jei-${MINECRAFT_VERSION}-fabric:${JEI_VERSION}"
 	}
 
 	// Jade
 	if(rootProject.hasProperty('JADE_CF_ID') && rootProject.hasProperty('FABRIC_JADE_CF_FILE_ID')) {
 		modImplementation "curse.maven:jade-${JADE_CF_ID}:${FABRIC_JADE_CF_FILE_ID}"
+		modShadersImplementation "curse.maven:jade-${JADE_CF_ID}:${FABRIC_JADE_CF_FILE_ID}"
 	}
 
 	// Lazy DFU
 	if(rootProject.hasProperty('FABRIC_LAZY_DFU_VERSION')) {
 		modRuntimeOnly "maven.modrinth:lazydfu:${FABRIC_LAZY_DFU_VERSION}"
+		modShadersRuntimeOnly "maven.modrinth:lazydfu:${FABRIC_LAZY_DFU_VERSION}"
 	}
 
 	// ModMenu
 	if(rootProject.hasProperty('FABRIC_MOD_MENU_VERSION')) {
 		modImplementation "com.terraformersmc:modmenu:${FABRIC_MOD_MENU_VERSION}"
+		modShadersImplementation "com.terraformersmc:modmenu:${FABRIC_MOD_MENU_VERSION}"
 	}
 }
 
@@ -117,6 +141,16 @@ processResources {
 	}
 
 	from project(':Common').sourceSets.main.resources
+}
+
+processShadersResources {
+	project.properties.each { key, value ->
+		inputs.property "${key}", "${value}"
+	}
+
+	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
+		expand project.properties
+	}
 }
 
 jar {
