--- a/gradle.properties
+++ b/gradle.properties
@@ -26,16 +26,25 @@ FORGE_VERSION_RANGE=[44.0.6,45.0.0)
 FABRIC_LOADER_VERSION=0.14.11
 FABRIC_VERSION=0.68.1
 
-JADE_CF_ID=324717
-#JEI_VERSION=11.2.0.246
-DEVLOGIN_VERSION=0.1.0.2
-
-FORGE_JADE_CF_FILE_ID=4199865
-
-FABRIC_MOD_MENU_VERSION=5.0.1
-FABRIC_LAZY_DFU_VERSION=0.1.3
-FABRIC_JADE_CF_FILE_ID=4109859
-
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=8.0.0
 APEXCORE_VERSION_RANGE=[8.0.0,9.0.0)
+
+# Recipe lookup mods | Only 1 should be loaded at a runtime
+#JEI_VERSION=???
+REI_VERSION=10.0.581
+EMI_VERSION=0.5.3
+# jei | rei | emi
+# Note: emi is fabric only
+RECIPE_LOOKUP_INCLUDE=rei
+
+# WAILA
+JADE_CF_ID=324717
+FORGE_JADE_CF_FILE_ID=4199865
+FABRIC_JADE_CF_FILE_ID=4109859
+
+# Utility mods
+FABRIC_MOD_MENU_VERSION=5.0.1
+FABRIC_LAZY_DFU_VERSION=0.1.3
+
+DEVLOGIN_VERSION=0.1.0.2
