--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -25,6 +25,7 @@ repositories {
 	maven { url 'https://dvs1.progwml6.com/files/maven/' }
 	maven { url 'https://modmaven.dev/' }
 	maven { url 'https://maven.covers1624.net/' }
+	maven { url 'https://maven.shedaniel.me' }
 
 	maven {
 		url 'https://www.cursemaven.com'
@@ -43,6 +44,17 @@ dependencies {
 	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 	implementation 'com.google.errorprone:error_prone_annotations:2.11.0'
 	modImplementation("${APEX_GROUP}.${APEXCORE_ID}.shared:${APEXCORE_ID}-shared:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") { transitive false }
+
+	// JEI
+	if(rootProject.hasProperty('JEI_VERSION')) {
+		modCompileOnlyApi("mezz.jei:jei-${MINECRAFT_VERSION}-common-api:${JEI_VERSION}")
+	}
+
+	// REI
+	if(rootProject.hasProperty('REI_VERSION')) {
+		modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:${REI_VERSION}"
+		modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin:${REI_VERSION}"
+	}
 }
 
 processResources {
