--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,10 @@ EMI_VERSION=0.5.3
 # Note: emi is fabric only
 RECIPE_LOOKUP_INCLUDE=rei
 
+# CTM | Currently on 1.19.2 (not updated)
+#CTM_FORGE_VERSION=???
+#CTM_FABRIC_VERSION=???
+
 # WAILA
 JADE_CF_ID=324717
 FORGE_JADE_CF_FILE_ID=4199865
