--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -165,7 +165,7 @@ processResources {
 		inputs.property "${key}", "${value}"
 	}
 
-	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
+	filesMatching([ '*.mixins.json', '**/*.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
 		expand project.properties
 	}
 
@@ -177,7 +177,7 @@ processShadersResources {
 		inputs.property "${key}", "${value}"
 	}
 
-	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
+	filesMatching([ '*.mixins.json', '**/*.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
 		expand project.properties
 	}
 }
