--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -24,6 +24,12 @@ architectury {
 }
 
 loom {
+	runs {
+		clientAuthed {
+			inherit(client)
+		}
+	}
+
 	forge {
 		convertAccessWideners = true
 		extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
@@ -31,6 +37,17 @@ loom {
 		mixinConfig "${MOD_ID}.mixins.json"
 		mixinConfig "${MOD_ID}-common.mixins.json"
 	}
+
+	settingsPostEdit.add(new java.util.function.Consumer<net.fabricmc.loom.configuration.ide.RunConfig>() {
+		@Override
+		void accept(net.fabricmc.loom.configuration.ide.RunConfig runConfig) {
+			if(runConfig.configName.toLowerCase(Locale.ROOT).contains('authed')) {
+				runConfig.programArgs.add('--launch_target')
+				runConfig.programArgs.add(runConfig.mainClass)
+				runConfig.mainClass = 'net.covers1624.devlogin.DevLogin'
+			}
+		}
+	})
 }
 
 repositories {
@@ -60,6 +77,7 @@ dependencies {
 	modApi "dev.architectury:architectury-forge:${ARCHITECTURY_VERSION}"
 
 	// Main
+	runtimeClasspath "net.covers1624:DevLogin:${DEVLOGIN_VERSION}"
 	common(project(path: ':Common', configuration: 'namedElements')) { transitive false }
 	shadowCommon(project(path: ':Common', configuration: 'transformProductionForge')) { transitive false }
 	modImplementation("${APEX_GROUP}.${APEXCORE_ID}.forge:${APEXCORE_ID}-forge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}") { transitive false }
