--- a/gradle.properties
+++ b/gradle.properties
@@ -46,6 +46,13 @@ RECIPE_LOOKUP_INCLUDE=rei
 #CTM_FORGE_VERSION=???
 #CTM_FABRIC_VERSION=???
 
+# ClothConfig
+CLOTH_CONFIG_FABRIC_ID=cloth-config
+CLOTH_CONFIG_FORGE_ID=cloth_config
+CLOTH_CONFIG_VERSION=9.0.+
+CLOTH_CONFIG_VERSION_MOD=9.0.0
+CLOTH_CONFIG_VERSION_RANGE=[9.0.+,10.0.0)
+
 # WAILA
 JADE_CF_ID=324717
 FORGE_JADE_CF_FILE_ID=4199865
