--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -143,6 +143,13 @@ dependencies {
 			exclude group: 'net.fabricmc.fabric-api'
 		}
 	}
+
+	// ClothConfig
+	if(rootProject.hasProperty('CLOTH_CONFIG_VERSION')) {
+		modApi("me.shedaniel.cloth:cloth-config-fabric:${CLOTH_CONFIG_VERSION}") {
+			exclude(module: 'fabric-api')
+		}
+	}
 }
 
 shadowJar {
