--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -77,6 +77,7 @@ repositories {
     maven { url 'https://modmaven.dev/' }
     maven { url 'https://maven.covers1624.net/' }
     maven { url 'https://maven.architectury.dev/' }
+    maven { url 'https://maven.shedaniel.me' }
 
     maven {
         url 'https://www.cursemaven.com'
@@ -95,6 +96,11 @@ dependencies {
     implementation fg.deobf("${APEX_GROUP}.${APEXCORE_ID}.forge:${APEXCORE_ID}-forge:${APEXCORE_VERSION}+${MINECRAFT_VERSION}")
     implementation(project(path: ':Common', configuration: 'namedElements')) { transitive false }
     implementation(project(path: ':Forge', configuration: 'namedElements')) { transitive false }
+
+    // ClothConfig
+    if(rootProject.hasProperty('CLOTH_CONFIG_VERSION')) {
+        api fg.deobf("me.shedaniel.cloth:cloth-config-forge:${CLOTH_CONFIG_VERSION}")
+    }
 }
 
 processResources {
