--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ apexcore_mod_id=apexcore
 apexcore_version=8.0.0
 apexcore_version_range=[8.0.0,9.0.0)
 
-#jei_version=11.2.0.246
+jei_version=12.0.2.2
 # ctm_version=1.1.4+4
 
 #jade_id=324717
