--- a/build.gradle
+++ b/build.gradle
@@ -173,8 +173,8 @@ dependencies {
 	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
 	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
 	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
-//
-//	runtimeOnly fg.deobf("curse.maven:jade-${jade_id}:${jade_version}")
+
+	runtimeOnly fg.deobf("curse.maven:jade-${jade_id}:${jade_version}")
 
 	// compileOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}:api")
 	// runtimeOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}")
