--- a/gradle.properties
+++ b/gradle.properties
@@ -24,5 +24,5 @@ apexcore_version_range=[8.0.0,9.0.0)
 jei_version=12.0.2.2
 # ctm_version=1.1.4+4
 
-#jade_id=324717
-#jade_version=3960379
+jade_id=324717
+jade_version=4330163
