--- a/gradle.properties
+++ b/gradle.properties
@@ -24,11 +24,11 @@ FORGE_VERSION=44.0.30
 FORGE_VERSION_RANGE=[44.0.6,45.0.0)
 
 FABRIC_LOADER_VERSION=0.14.11
-FABRIC_VERSION=0.68.1
+FABRIC_VERSION=0.69.1
 
 QUILT_LOADER_VERSION=0.18.1-beta.27
 QUILT_LIBRARY_VERSION=4.0.0-beta.5
-QUILT_FABRIC_VERSION=5.0.0-alpha.9+0.72.0
+QUILT_FABRIC_VERSION=5.0.0-alpha.6
 
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=8.0.0
